--- a/src/Plugins/ThingsGateway.OPCDA/OPCDAClientDebugDriverPage.razor
+++ b/src/Plugins/ThingsGateway.OPCDA/OPCDAClientDebugDriverPage.razor
@@ -92,9 +92,9 @@
                 @{
                     var item = Messages;
                     <MRow Class="ml-2 mr-2 d-flex" NoGutters>
-                        <MVirtualScroll Context="itemMessage" Height=@("calc(100vh - 500px)") OverscanCount=2 ItemSize="200" Items="item.OrderByDescending(a=>a.id).ToList()">
+                        <MVirtualScroll Context="itemMessage" Height=@("calc(100vh - 500px)") OverscanCount=2 ItemSize="200" Items="item">
                             <ItemContent>
-                                <div title=@itemMessage.message class=@(itemMessage.isRed==null?" black--text ":itemMessage.isRed==true?" red--text ":"green--text ") style="white-space: nowrap !important;overflow: hidden !important; text-overflow: ellipsis !important;">
+                                <div title=@itemMessage.message class=@(itemMessage.level<Microsoft.Extensions.Logging.LogLevel.Information?" black--text ":itemMessage.level>=Microsoft.Extensions.Logging.LogLevel.Warning?" red--text ":"green--text ") style="white-space: nowrap !important;overflow: hidden !important; text-overflow: ellipsis !important;">
                                     @itemMessage.message
                                 </div>
 
@@ -126,7 +126,7 @@
         </MButton>
     </SaveContent>
 </PModal>
-@code{
+@code {
     bool IsShowImportVariableList;
     private ImportVariable importVariable { get; set; }
 }
@@ -137,7 +137,7 @@
     private async Task DownDeviceExport()
     {
         var data = importVariable?.GetImportVariableList();
-        if(data!=null)
+        if (data != null)
         {
             await DownDeviceExport(data?.Item1);
             await DownDeviceExport(data?.Item2);
@@ -158,10 +158,10 @@
     }
     private void ValueOut(List<ItemReadResult> values)
     {
-        Messages.Add((Yitter.IdGenerator.YitIdHelper.NextId(), null, values.ToJson().FormatJson()));
+        Messages.Add((Microsoft.Extensions.Logging.LogLevel.Debug, values.ToJson().FormatJson()));
         if (Messages.Count > 2500)
         {
-            Messages.RemoveRange(0, 2000);
+            Messages.Clear();
         }
     }
 
@@ -184,7 +184,7 @@
         }
         else
         {
-            Messages.Add((Yitter.IdGenerator.YitIdHelper.NextId(), true, DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss ffff") + " - " + data.Message));
+            Messages.Add((Microsoft.Extensions.Logging.LogLevel.Warning, DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss ffff") + " - " + data.Message));
         }
         return Task.CompletedTask;
     }
@@ -196,16 +196,16 @@
             var data = _plc.Write(address, writeValue);
             if (data.IsSuccess)
             {
-                Messages.Add((Yitter.IdGenerator.YitIdHelper.NextId(), false, DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss ffff") + " - 写入" + data.Message));
+                Messages.Add((Microsoft.Extensions.Logging.LogLevel.Information, DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss ffff") + " - 写入" + data.Message));
             }
             else
             {
-                Messages.Add((Yitter.IdGenerator.YitIdHelper.NextId(), true, DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss ffff") + " - " + data.Message));
+                Messages.Add((Microsoft.Extensions.Logging.LogLevel.Warning, DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss ffff") + " - " + data.Message));
             }
         }
         catch (Exception ex)
         {
-            Messages.Add((Yitter.IdGenerator.YitIdHelper.NextId(), true, DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss ffff") + " - " + "写入失败：" + ex.Message));
+            Messages.Add((Microsoft.Extensions.Logging.LogLevel.Error, DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss ffff") + " - " + "写入失败：" + ex.Message));
         }
         return Task.CompletedTask;
     }
