--- a/src/ThingsGateway.Web.Rcl.Core/Shared/BaseLayout.razor
+++ b/src/ThingsGateway.Web.Rcl.Core/Shared/BaseLayout.razor
@@ -43,12 +43,16 @@
         MasaBlazor.Breakpoint.MobileBreakpoint = 666;
         MasaBlazor.Breakpoint.OnUpdate += BreakpointOnOnUpdate;
     }
-    private async Task BreakpointOnOnUpdate()
+
+    private void BreakpointOnOnUpdate(object sender, BreakpointChangedEventArgs e)
     {
-        IsMobile = MasaBlazor.Breakpoint.Mobile;
-        StateHasChanged();
-        await Task.CompletedTask;
+        if (e.MobileChanged)
+        {
+            IsMobile = MasaBlazor.Breakpoint.Mobile;
+            StateHasChanged();
+        }
     }
+
     public void Dispose()
     {
         MasaBlazor.Breakpoint.OnUpdate -= BreakpointOnOnUpdate;
