sqlsugar偶发线程故障，添加copyNew方法

--- a/src/ThingsGateway.Web.Rcl.Core/Shared/Auth/Login.razor
+++ b/src/ThingsGateway.Web.Rcl.Core/Shared/Auth/Login.razor
@@ -12,7 +12,7 @@
 
 @page "/login"
 @layout BaseLayout
-@inherits CultureLayoutComponentBase
+@inherits CultureComponentBase
 @namespace ThingsGateway.Web.Rcl
 @using BlazorComponent;
 @using Masa.Blazor.Presets;
