修改OPCUAClient的心跳频率配置项

--- a/src/Plugins/ThingsGateway.OPCUA/OPCUAClient/OPCUAClientPage.razor
+++ b/src/Plugins/ThingsGateway.OPCUA/OPCUAClient/OPCUAClientPage.razor
@@ -31,7 +31,7 @@
         <MTextField Class="mx-1 my-1" Label=@node.Description(a=>a.UpdateRate) Dense Outlined HideDetails="@("auto")" @bind-Value=@node.UpdateRate />
 
         <MTextField Class="mx-1 my-1" Label=@node.Description(a=>a.DeadBand) Dense Outlined HideDetails="@("auto")" @bind-Value=@node.DeadBand />
-        <MTextField Class="mx-1 my-1" Label=@node.Description(a=>a.ReconnectPeriod) Dense Outlined HideDetails="@("auto")" @bind-Value=@node.ReconnectPeriod />
+        <MTextField Class="mx-1 my-1" Label=@node.Description(a=>a.KeepAliveInterval) Dense Outlined HideDetails="@("auto")" @bind-Value=@node.KeepAliveInterval />
     </MRow>
     <MRow Justify="JustifyTypes.SpaceBetween" Align="AlignTypes.Center">
         <MCheckbox Class="mx-1 my-1" Label=@node.Description(a=>a.IsUseSecurity) Dense HideDetails="@("auto")" @bind-Value=@node.IsUseSecurity />
