更新icon包版本

--- a/src/ThingsGateway.Web.Rcl.Core/Shared/BaseLayout.razor
+++ b/src/ThingsGateway.Web.Rcl.Core/Shared/BaseLayout.razor
@@ -34,7 +34,10 @@
     public bool IsMobile { get; set; }
     protected async override Task OnAfterRenderAsync(bool firstRender)
     {
-        await JsInitVariables.SetTimezoneOffsetAsync();
+        if (firstRender)
+        {
+            await JsInitVariables.SetTimezoneOffsetAsync();
+        }
         await base.OnAfterRenderAsync(firstRender);
     }
     protected override void OnInitialized()
