--- a/src/ThingsGateway.Web.Server/Pages/_Host.cshtml
+++ b/src/ThingsGateway.Web.Server/Pages/_Host.cshtml
@@ -11,9 +11,9 @@
     <base href="/" />
 
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet" />
-    <link href=@(BlazorConst.ResourceUrl+"css/materialdesign/v6.x/css/materialdesignicons.min.css") rel="stylesheet">
-    <link href=@(BlazorConst.ResourceUrl+"css/material/materialicons.css") rel="stylesheet">
-    <link href=@(BlazorConst.ResourceUrl+"css/fontawesome/v5.15.4/css/all.min.css") rel="stylesheet">
+    <link href=@(BlazorConst.ResourceUrl+"css/materialdesign/v7.1.96/css/materialdesignicons.min.css") rel="stylesheet">
+    <link href=@(BlazorConst.ResourceUrl+"css/material/icons.css") rel="stylesheet">
+    <link href=@(BlazorConst.ResourceUrl+"css/fontawesome/v6.4.0/css/all.min.css") rel="stylesheet">
     <link href=@(BlazorConst.ResourceUrl+"TB.css") rel="stylesheet">
 
     <script>
